[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "qhw-scheduler"
version = "0.1.0"
description = "QPU-local scheduler C ABI with Python bindings"
license = { file = "LICENSE" }
requires-python = ">=3.9"

[tool.scikit-build]
wheel.packages = ["python/qhw_scheduler"]

[tool.scikit-build.cmake.define]
QHW_SCHED_BUILD_TESTS = "OFF"
QHW_SCHED_BUILD_PYTHON = "ON"
QHW_SCHED_INSTALL_PYTHON_ARTIFACTS = "ON"
